Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

Thanks!

2.0.0.2014
----------
- Fix "Folder NOT xxx" implementation which wasn't working right for group folders.

2.0.0.2013
----------
- Resort the folder list when a folder is renamed.
- Cmd-click on a link in the web view opens the link in a new tab.
- Download SITX files as SITX files even if the server returns a MIME type of text.

2.0.0.2012
----------
- Fix bug which prevented a system from going to sleep if automatic refreshes are enabled.
- Stepping through article lists does not refresh the article pane until the steps complete.
- Completed all localisation fixes.
- Auto-expire now runs post-refresh in addition to at start up.
- Vienna now checks that it can create the database in the users home folder and prompts
  for an alternative location if not.
- Don't scroll the current article after a refresh if it hasn't been changed or expired.

2.0.0.2011
----------
- Added option to export subscriptions with groups or as a flat file.
- Refresh when the system awakes from sleep if the refresh frequency is not set to manual.
- Added German Localisation. (Thanks to Jan Kampling).
- Improved handling of invalid styles.
- Vienna can now download files. A new Downloads window has been added which tracks the file
  downloads. The downloads folder can now be configured via Preferences.
- Added "Mark All Subscriptions as Read" command. (Thanks to Yann Bizeul).
- Incorporated patches from Yann Bizeul and Adam Hammer.
- Close button on tabs now depress and highlight properly.
- New Preferences UI.
- Font selection in Preferences changed to use the standard OS font picker.
- Add an option to disable feed folder images in the folders list.
- Moved unread count on application icon to the top right corner to be consistent with most
  other Mac OSX applications.